@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.122 2005/03/30 05:33:47 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.123 2005/03/30 22:11:27 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  30 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Check for disklabel type "loop" and use the device name without a minor.
 
   29 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Remove /tmp/compile_output.log and /var/log/install.log when install is
